bk_ida/gccida/g1/free_for_value_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/free_for_value_p/src/reload1.c:5473:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/free_for_value_p/src/reload1.c:5475:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/free_for_value_p/src/reload1.c:5510:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v9 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/free_for_value_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/free_for_value_p/src/reload1.c:5653:24: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v19 = ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)v21 + 2)] - 5) <= 1; 
                       ^~~~~~~~~~~~
                       mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/free_for_value_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/free_for_value_p/src/obj/reload1.o] Error 1
